plugins {
    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.6.5'
}

group 'io.github.kings1990'
version '1.1.3'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    compile "org.projectlombok:lombok:1.18.18"
    compile "com.google.guava:guava:30.1-jre"
    compile "commons-beanutils:commons-beanutils:1.9.4"
    compile "org.springframework:spring-web:5.3.7"
    compile "com.alibaba:fastjson:1.2.76"
    compile "cn.hutool:hutool-all:5.6.5"
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java', "com.intellij.properties", "com.intellij.java-i18n"]
    version '2021.1'
    updateSinceUntilBuild false
}
patchPluginXml {
    changeNotes """

    <h3>v1.1.3</h3>
    <ul>
        <li>controller url fixed variable can replace by config</li>
        <li>add some guide</li>
        <li>show tool window when click generate icon</li>
    </ul>
    
    <h3>v1.1.2</h3>
    <ul>
        <li>add line icon for method</li>
        <li>limit send button click frequency</li>
        <li>optimize response show large text</li>
    </ul>
    
    <h3>v1.1.1</h3>
    <ul>
        <li>fix some bugs</li>
        <li>params can delete batch</li>
    </ul>
    
    <h3>v1.1.0</h3>
    <ul>
        <li>support http request</li>
        <li>support modify and add params</li>
        <li>beautify ui</li>
        <li>fix some bugs</li>
    </ul>
    
    <h3>v1.0.0</h3>
    <ul>
        <li>support Springmvc/SpringBoot</li>
        <li>support custom domain</li>
        <li>support custom params</li>
    </ul>
    """
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}